--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -20,5 +20,7 @@
 		The specified category {{ category_name }} does not exist!
 	{% endif %}
 	
+	<a href="/rango/category/{{category_name_url}}/add_page/">Add a New Page</a>
+
 </body>
 </html>
